reform style structure, fix z-index

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,8 @@
 @import 'nullstyle';
 @import 'templates';
+@import 'accordion';
+@import 'tabs';
+
 
 // -підключення шрифтів
 @font-face {
@@ -118,7 +121,7 @@ body{
 		width: 40px;
 		height: 30px;
 		cursor: pointer;
-		z-index: 2;
+		z-index: 11;
 		@media (max-width: 600px) {
 			display: flex;
 			&.active{
@@ -157,6 +160,7 @@ body{
 			}
 			@media (max-width: 600px) {
 				position: fixed;
+				z-index: 10;
 				top: 0;
 				right: 0;
     			transform: translateX(100%);
@@ -209,119 +213,4 @@ body{
 		}
 
 }
-
-
-//- tabs section styles
-.tabs {
-
-		&__container {
-			background-color: $color-bg-2;
-			padding: 0;
-		}
-}
-.item-tabs {
-	display: flex;
-	justify-content: space-around;
-	background-color: $color-header-bg;
-		&__title {
-			font-size: 20px;
-			font-weight: 600;
-			padding-block: 16px;
-			flex: 1 1 33.333%;
-			text-align: center;
-			cursor: pointer;
-			&:hover{
-				background-color: #e2d89a;
-			}
-			&.active{
-				background-color: $color-bg-2;
-			}
-		}
-}
-.tabs-content {
-
-		&__body {
-			padding: 20px 15px;
-			display: none;
-			&.active{
-				display: block;
-			}
-			@media(min-width: 768px){
-				padding: 12px 20px;
-			}
-		}
-
-		&__title {
-			font-size: 22px;
-			font-weight: 600;
-			margin-bottom: 8px;
-		}
-
-		&__text {
-		}
-}
-
-// - acordion section styles
-
-.accordion {
-
-		&__container {
-			background-color: $color-bg-2;
-			padding: 16px 20px;
-		}
-
-		&__item {
-			
-			&:not(:last-child){
-				margin-bottom: 16px;
-			}
-		}
-		
-		&__input {
-			display: none;
-			appearance: none;
-			
-		}
-		
-		&__header {
-			background-color: $color-navbar-bg;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			padding: 16px 10px;
-			cursor: pointer;
-			transition: all 0.2s ease-in-out;
-			&:hover{
-				scale: 1.01;
-				background-color: $color-navbar-bg-hover;
-			}
-			
-			& span{
-					font-size: 22px;
-					font-weight: 600;
-			}
-		}
-
-		&__content {
-			max-height: 0;
-			overflow: hidden;
-			// display: none;
-			padding-top: 8px;
-			background-color: $color-header-bg;
-			transition: all 0.7s ease-in-out;
-			&.active{
-				max-height: 500px;
-				padding: 6px 10px;
-				// display: block;
-			}
-		}
-}
-.icon-plus {
-	transition: transform 0.5s ease-in-out;
-	&.active{
-		transform: rotate(315deg);
-		color: $color-bg;
-	}
-}
-
 
